Use yield statements in the test fixtures, drop whitespace rules from templates and overwrite style of footer

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,1 +1,5 @@
 @import 'bulma/css/bulma.css';
+
+.footer {
+  padding: 3rem 1.5rem;
+}
